--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "@angular/router": "12.0.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.0.0",
     "@nrwl/angular": "12.3.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "mongoose": "^5.12.9",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
