--- a/angular.json
+++ b/angular.json
@@ -29,130 +29,23 @@
     },
     "@nrwl/angular:component": {
       "style": "scss"
+    },
+    "@nrwl/react": {
+      "application": {
+        "style": "scss",
+        "linter": "eslint",
+        "babel": true
+      },
+      "component": {
+        "style": "scss"
+      },
+      "library": {
+        "style": "scss",
+        "linter": "eslint"
+      }
     }
   },
   "projects": {
-    "luckydraw": {
-      "projectType": "application",
-      "root": "apps/luckydraw",
-      "sourceRoot": "apps/luckydraw/src",
-      "prefix": "grofers",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist/apps/luckydraw",
-            "index": "apps/luckydraw/src/index.html",
-            "main": "apps/luckydraw/src/main.ts",
-            "polyfills": "apps/luckydraw/src/polyfills.ts",
-            "tsConfig": "apps/luckydraw/tsconfig.app.json",
-            "inlineStyleLanguage": "scss",
-            "assets": [
-              "apps/luckydraw/src/favicon.ico",
-              "apps/luckydraw/src/assets"
-            ],
-            "styles": ["apps/luckydraw/src/styles.scss"],
-            "scripts": []
-          },
-          "configurations": {
-            "production": {
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
-                }
-              ],
-              "fileReplacements": [
-                {
-                  "replace": "apps/luckydraw/src/environments/environment.ts",
-                  "with": "apps/luckydraw/src/environments/environment.prod.ts"
-                }
-              ],
-              "outputHashing": "all"
-            },
-            "development": {
-              "buildOptimizer": false,
-              "optimization": false,
-              "vendorChunk": true,
-              "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true
-            }
-          },
-          "defaultConfiguration": "production"
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "configurations": {
-            "production": {
-              "browserTarget": "luckydraw:build:production"
-            },
-            "development": {
-              "browserTarget": "luckydraw:build:development"
-            }
-          },
-          "defaultConfiguration": "development",
-          "options": {
-            "proxyConfig": "apps/luckydraw/proxy.conf.json"
-          }
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "luckydraw:build"
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "options": {
-            "lintFilePatterns": [
-              "apps/luckydraw/src/**/*.ts",
-              "apps/luckydraw/src/**/*.html"
-            ]
-          }
-        },
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/luckydraw"],
-          "options": {
-            "jestConfig": "apps/luckydraw/jest.config.js",
-            "passWithNoTests": true
-          }
-        }
-      }
-    },
-    "luckydraw-e2e": {
-      "root": "apps/luckydraw-e2e",
-      "sourceRoot": "apps/luckydraw-e2e/src",
-      "projectType": "application",
-      "architect": {
-        "e2e": {
-          "builder": "@nrwl/cypress:cypress",
-          "options": {
-            "cypressConfig": "apps/luckydraw-e2e/cypress.json",
-            "tsConfig": "apps/luckydraw-e2e/tsconfig.e2e.json",
-            "devServerTarget": "luckydraw:serve:development"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "luckydraw:serve:production"
-            }
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "options": {
-            "lintFilePatterns": ["apps/luckydraw-e2e/**/*.{js,ts}"]
-          }
-        }
-      }
-    },
     "api": {
       "root": "apps/api",
       "sourceRoot": "apps/api/src",
@@ -212,6 +105,224 @@
           "builder": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["libs/api-interfaces/**/*.ts"]
+          }
+        }
+      }
+    },
+    "luckydraw": {
+      "root": "apps/luckydraw",
+      "sourceRoot": "apps/luckydraw/src",
+      "projectType": "application",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/web:build",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/apps/luckydraw",
+            "index": "apps/luckydraw/src/index.html",
+            "main": "apps/luckydraw/src/main.tsx",
+            "polyfills": "apps/luckydraw/src/polyfills.ts",
+            "tsConfig": "apps/luckydraw/tsconfig.app.json",
+            "assets": [
+              "apps/luckydraw/src/favicon.ico",
+              "apps/luckydraw/src/assets"
+            ],
+            "styles": ["apps/luckydraw/src/styles.scss"],
+            "scripts": [],
+            "webpackConfig": "@nrwl/react/plugins/webpack"
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "apps/luckydraw/src/environments/environment.ts",
+                  "with": "apps/luckydraw/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@nrwl/web:dev-server",
+          "options": {
+            "buildTarget": "luckydraw:build"
+          },
+          "configurations": {
+            "production": {
+              "buildTarget": "luckydraw:build:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["apps/luckydraw/**/*.{ts,tsx,js,jsx}"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/luckydraw"],
+          "options": {
+            "jestConfig": "apps/luckydraw/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "luckydraw-e2e": {
+      "root": "apps/luckydraw-e2e",
+      "sourceRoot": "apps/luckydraw-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/luckydraw-e2e/cypress.json",
+            "tsConfig": "apps/luckydraw-e2e/tsconfig.e2e.json",
+            "devServerTarget": "luckydraw:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "luckydraw:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["apps/luckydraw-e2e/**/*.{js,ts}"]
+          }
+        }
+      }
+    },
+    "luckydraw-ng": {
+      "projectType": "application",
+      "root": "apps/luckydraw-ng",
+      "sourceRoot": "apps/luckydraw-ng/src",
+      "prefix": "grofers",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/apps/luckydraw-ng",
+            "index": "apps/luckydraw-ng/src/index.html",
+            "main": "apps/luckydraw-ng/src/main.ts",
+            "polyfills": "apps/luckydraw-ng/src/polyfills.ts",
+            "tsConfig": "apps/luckydraw-ng/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "apps/luckydraw-ng/src/favicon.ico",
+              "apps/luckydraw-ng/src/assets"
+            ],
+            "styles": ["apps/luckydraw-ng/src/styles.scss"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "apps/luckydraw-ng/src/environments/environment.ts",
+                  "with": "apps/luckydraw-ng/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "luckydraw-ng:build:production"
+            },
+            "development": {
+              "browserTarget": "luckydraw-ng:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "luckydraw-ng:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "apps/luckydraw-ng/src/**/*.ts",
+              "apps/luckydraw-ng/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/luckydraw-ng"],
+          "options": {
+            "jestConfig": "apps/luckydraw-ng/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "luckydraw-ng-e2e": {
+      "root": "apps/luckydraw-ng-e2e",
+      "sourceRoot": "apps/luckydraw-ng-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/luckydraw-ng-e2e/cypress.json",
+            "tsConfig": "apps/luckydraw-ng-e2e/tsconfig.e2e.json",
+            "devServerTarget": "luckydraw-ng:serve:development"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "luckydraw-ng:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["apps/luckydraw-ng-e2e/**/*.{js,ts}"]
           }
         }
       }
