--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "update": "nx migrate latest",
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "dev:serve": "nx run-many --target=serve --all --parallel=true"
   },
   "private": true,
   "dependencies": {
@@ -44,8 +45,14 @@
     "@nrwl/angular": "12.3.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "core-js": "^3.6.5",
+    "document-register-element": "1.13.1",
     "mongoose": "^5.12.9",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-router-dom": "5.2.0",
     "reflect-metadata": "^0.1.13",
+    "regenerator-runtime": "0.13.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -58,6 +65,10 @@
     "@angular/cli": "12.0.0",
     "@angular/compiler-cli": "12.0.0",
     "@angular/language-service": "12.0.0",
+    "@babel/core": "7.12.13",
+    "@babel/preset-env": "7.12.13",
+    "@babel/preset-react": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@nrwl/cli": "12.3.3",
@@ -67,17 +78,29 @@
     "@nrwl/linter": "12.3.3",
     "@nrwl/nest": "12.3.3",
     "@nrwl/node": "12.3.3",
+    "@nrwl/react": "12.3.3",
+    "@nrwl/schematics": "^8.12.11",
     "@nrwl/tao": "12.3.3",
+    "@nrwl/web": "12.3.3",
     "@nrwl/workspace": "12.3.3",
+    "@testing-library/react": "11.2.6",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
+    "@types/react-router-dom": "5.1.7",
     "@typescript-eslint/eslint-plugin": "4.19.0",
     "@typescript-eslint/parser": "4.19.0",
+    "babel-jest": "26.2.2",
     "cypress": "^6.0.1",
     "dotenv": "8.2.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.23.1",
+    "eslint-plugin-react-hooks": "4.2.0",
     "jest": "26.2.2",
     "jest-preset-angular": "8.4.0",
     "prettier": "2.2.1",
