--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "dev:serve": "nx run-many --target=serve --all --parallel=true"
+    "dev:serve": "nx run-many --target=serve --all --parallel=true",
+    "api:serve": "nx run --target=serve --project=api"
   },
   "private": true,
   "dependencies": {
@@ -43,12 +44,15 @@
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.0.0",
     "@nrwl/angular": "12.3.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
     "mongoose": "^5.12.9",
     "react": "17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "17.0.2",
     "react-router-dom": "5.2.0",
     "reflect-metadata": "^0.1.13",
